<resources>
    <string name="app_name">TaniCare</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="terms">By continuing with the services above, you agree to TaniCare\'s\nTerms of Service and Privacy Policy.</string>
    <string name="login_welcome_1">Welcome back!\nTaniFriends</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tanicare_logo">TaniCare Logo</string>
    <string name="settings">Settings</string>
    <string name="register_welcome_1">Welcome Aboard!\nTaniFriends</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>
    <string name="analyze">Analyze</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="hi_welcome">Hi\nWelcome to…</string>
    <string name="sahabat">Sahabat Para Petani</string>
    <string name="register_welcome_2">We\'re excited to have you join us!</string>
    <string name="login_welcome_2">Glad to see you again!</string>
    <string name="login_welcome_3">Login to your account</string>
    <string name="register_welcome_3">Create your account\n</string>
    <string name="empty_history">History is empty</string>
    <string name="accuracy">Accuracy:</string>
    <string name="label">Label:</string>
    <string name="predicted_image">Predicted Image</string>
    <string name="timestamp">Timestamp</string>
    <string name="application">Application</string>
    <string name="symptoms">Symptoms</string>
    <string name="medicines">Medicines</string>
    <string name="diseaseName">Disease Name</string>
</resources>